--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(
 
 add_executable(1008
     src/main.cpp
-    src/GameBase.h
-    src/GameBase.cpp
+    src/Game.h
+    src/Game.cpp
     )
 target_link_libraries(1008 SDL2 SDL2_image SDL2_mixer SDL2_ttf)
