--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(1008
     messagebus/Message.cpp
     messagebus/MessageBus.h
     messagebus/MessageBus.cpp
-
+    messagebus/BusNode.h
+    messagebus/BusNode.cpp
     )
 target_link_libraries(1008 SDL2 SDL2_image SDL2_mixer SDL2_ttf)
