Sprite and GameObject classes fully working! (Altough still very crude).
Very excited! Lots of progress and fixed a major bug that had been bugging me (pun intended kek) all day. Planning on showing stuff on the screen soon!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ add_executable(1008
     src/GraphicManager.cpp
     src/GameObject.h
     src/GameObject.cpp
+    src/Sprite.h
+    src/Sprite.cpp
     messagebus/Message.h
     messagebus/Message.cpp
     messagebus/MessageBus.h
